formulaire de contact

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
             <div class="column is-8 is-offset-2">
               <form
-                action="https://formspree.io/email@example.com"
+                action="https://formspree.io/f/xknkknlq"
                 method="POST"
               >
                 <div class="field">
