--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Developpeuse Web Back-End</title>
     <!-- Bulma Version 0.9.0-->
-    <link rel="stylesheet" type="text/css" href="C:\Users\irisb\source\website\docs\assets\css\style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <script
       src="https://kit.fontawesome.com/2828f7885a.js"
