--- a/index.html
+++ b/index.html
@@ -383,11 +383,12 @@
 
     <!-- Begin Footer -->
     <div class="footer">
-      <p>
-        <strong class="is-dark">Site réalisé avec Bulma</strong> à partir de la contribution de <a href="http://jgthms.com">Jeremy Thomas</a>.
+      <p class="is-dark">
+        <strong class="">Site réalisé avec Bulma à partir de la contribution de <a href="http://jgthms.com">Jeremy Thomas</a>.
         The source code is licensed
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
         <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </strong>
       </p>
     </div>
     <!-- End Footer -->
