ajout merci de votre envoi

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
                     </button>
                   </div>
                 </div>
+                <p id="my-form-status"></p>
               </form>
               <script>
                 var form = document.getElementById("my-form");
