message formulaire francisé

--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
                         'Accept': 'application/json'
                     }
                   }).then(response => {
-                    status.innerHTML = "Thanks for your submission!";
+                    status.innerHTML = "Merci pour votre envoi !";
                     form.reset()
                   }).catch(error => {
-                    status.innerHTML = "Oops! There was a problem submitting your form"
+                    status.innerHTML = "Oups! Il semble y avoir eu un souci à l'envoi du formulaire"
                   });
                 }
                 form.addEventListener("submit", handleSubmit)
