--- a/index.html
+++ b/index.html
@@ -385,9 +385,7 @@
     <!-- Begin Footer -->
     <div class="footer">
       <p class="is-dark">
-        <strong class="">Site réalisé avec Bulma à partir de la contribution de <a href="http://jgthms.com">Jeremy Thomas</a>.
-        The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
+        <strong class="">Site réalisé avec Bulma. Code source sous licence 
         <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
       </strong>
       </p>
